# api

./: .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile  entrypoint.sh
migrations/: env.py  helper.py  script.py.mako
migrations/versions/: 96115ea05082_added_positions.py
migrations/versions/added_positions/: downgrade.sql  upgrade.sql
src/chessdb_api/: __init__.py  asgi.py
src/chessdb_api/core/: config_loader.py  db.py  security.py  service_factory.py  version.py
src/chessdb_api/domain/: base_schemas.py
src/chessdb_api/domain/positions/: position_model.py  position_queries.py  position_schemas.py  position_services.py
src/chessdb_api/models/: __init__.py  base.py  users.py
src/chessdb_api/routers/: positions.py
src/chessdb_api/routes/users/: __init__.py
src/chessdb_api/schemas/: user.py
tests/: conftest.py
tests/test_positions/: __init__.py  test_basic_positive.py
