[tool.poetry]
name = "chessdb_api"
version = "0.1.0"
description = "Rest API for ChessDB (https://api.chessdb.dev)"
authors = [
    "Kristian Nymann Jakobsen <nymann@chessdb.dev>",
    "Lukáš Zahradník <lukas@chessdb.dev>",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
gino = "^1.0.1"
sqlalchemy-utils = "^0.36.8"
alembic = "^1.4.2"
uvicorn = "^0.11.6"
sentry_sdk = "^0.16.2"
python-dotenv = "^0.14.0"
python-jose = "^3.1.0"
passlib = "^1.7.2"
bcrypt = "^3.1.7"
email-validator = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest-runner = "^5.2"
pytest = "^5.4.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10.0"
requests = "^2.24.0"
nitpick = "^0.22.2"

[tool.nitpick]
style = "https://github.com/chessdb/.github/blob/master/styles/python/nitpick-style.toml"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
